# vlaginstructie

./: .gitignore
.github/workflows/: reuse.yml  scraper.yml
.reuse/: dep5
scraper/: Cargo.toml
scraper/data/: koninklijkhuis.md  koninklijkhuis.md.license  rijksoverheid.md  rijksoverheid.md.license
scraper/src/: main.rs
